--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block script  %}
-    <link rel='stylesheet' type='text/css' media='screen' href="{{ url_for('static', path='/home.css') }}">
-    <script src="{{ url_for('static', path='/home.js') }}""></script>
+    <link rel="stylesheet" href="/static/home.css">
+    <script src="/static/home.js"></script>
 {% endblock %}
 {% block content %}
     <div class="main-container">
